--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "lodash.pick": "^4.4.0",
     "react-merge-refs": "^1.0.0",
     "stats.js": "^0.17.0",
-    "troika-three-text": "git+https://github.com/protectwise/troika#v0.41.0",
+    "troika-three-text": "git+https://github.com/protectwise/troika#892312e24a61b15daeeadfebe953693df493e24a",
     "utility-types": "^3.10.0",
     "zustand": "^3.0.3"
   },
