--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "url": "https://github.com/react-spring/drei/issues"
   },
   "homepage": "https://github.com/react-spring/drei",
-  "main": "index.cjs.js",
-  "module": "index.js",
-  "types": "index.d.ts",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "sideEffects": false,
   "husky": {
     "hooks": {
